--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <h1>Origami</h1>
+    <h1>origami</h1>
     <p>
         Origami is the Japanese art of paper folding. In modern usage, the word
         "origami" is often used as an inclusive term for all folding practices, regardless of their culture of origin.
