--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
     <p>
         -- From Wikipedia
     </p>
-    <img src="Cranes_made_by_Origami_paper.jpg" alt="origami cranes">
+    <img src="poop.jpg" alt="poop">
 </body>
 
 </html>
